# advent_of_code_2024

./: .gitignore  README.md  day_1.py  pyproject.toml
src/: aoc.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  setup_day.py
src/advent_of_code_2024/: day_1.py  day_2.py
