[project]
name = "advent_of_code_2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Thibault Dody", email = "thibault.dody@gmail.com"},
]
dependencies = [
    "format>=1.0",
    "mypy>=1.13.0",
    "black>=24.10.0",
    "ruff>=0.8.1",
    "isort>=5.13.2",
    "loguru>=0.7.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
